[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_sprsvd"
version = "0.0.1"
authors = [
  { name="Ciwan Ceylan", email="ciwan@kth.se" },
]
description = "A PyTorch library for calculating rSVD in a single pass through the data."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ciwanceylan/torch-sprsvd"
Issues = "https://github.com/ciwanceylan/torch-sprsvd/issues"
